# redis-task-queue

./: .gitignore  CMakeLists.txt  README.MD  config.cpp  config.h  main.cpp
include/: broker.h  logger.h  mechanism.h  queue.h  scheduler.h  task.h  worker.h
include/pool/: thread.h
include/redis/: client.h
src/: logger.cpp  mechanism.cpp  queue.cpp  scheduler.cpp  task.cpp  worker.cpp
src/pool/: thread.cpp
src/redis/: client.cpp
